Add more answers to mascota question

--- a/cumple.html
+++ b/cumple.html
@@ -663,7 +663,7 @@ body {
             {
                 id: "mascota",
                 question: "¿Nombre de alguna mascota de Isaac?",
-                answers: ["jupi","júpiter", "jupiter","satu","saturno"]
+                answers: ["jupi","júpiter", "jupiter","satu","saturno","plutón","pluti","pluton"]
             }
         ];
 
